--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,6 @@
     tools:context=".login.LoginActivity"
     android:background="@drawable/fondo_log2">
 
-
-
     <!--TextView: LOGIN -->
 
 
@@ -31,6 +29,7 @@
         android:layout_marginTop="91dp"
         android:gravity="center_horizontal"
         android:text="de nuevo!"
+        android:fontFamily="@font/font_style_bold"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp"
@@ -48,7 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="E-mail"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:fontFamily="@font/font_style_regular"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,25 +66,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Contraseña"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:fontFamily="@font/font_style_regular"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--TextView: BOTON REGISTRO -->
-
-    <!--TextView: Ir a RegistroActivity -->
-
-    <!-- Acceso con google -->
 
     <Button
         android:id="@+id/loginBtn"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="131dp"
-        android:layout_height="62dp"
+        style="@style/loginButton"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/contrasenaTIL"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
-        android:drawableLeft="@drawable/key"
-        android:drawablePadding="5dp"
+        android:fontFamily="@font/font_style_regular"
         android:text="Entrar" />
 
     <TextView
@@ -98,6 +93,7 @@
         android:layout_marginEnd="37dp"
         android:gravity="center_horizontal"
         android:text="¿Aún no tienes una cuenta? Regístrate! "
+        android:fontFamily="@font/font_style_regular"
         android:textAlignment="center" />
 
     <TextView
@@ -109,6 +105,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="¿Has olvidado la contraseña?"
+        android:fontFamily="@font/font_style_regular"
         android:textAlignment="center" />
 
     <TextView
@@ -117,6 +114,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="42dp"
         android:text="¡Bienvenido"
+        android:fontFamily="@font/font_style_bold"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp"
