--- a/app/src/main/res/layout/filas_posts.xml
+++ b/app/src/main/res/layout/filas_posts.xml
@@ -39,9 +39,9 @@
                      android:id="@+id/uNameTv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:fontFamily="sans-serif-thin"
+                     android:fontFamily="@font/font_style_medium"
                      android:text="Name"
-                     android:textColor="@color/colorBlack"
+                     android:textColor="@color/colorMediumBlack"
                      android:textSize="20sp" />
 
              </LinearLayout>
@@ -60,8 +60,8 @@
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:autoLink="all"
-             android:fontFamily="sans-serif-light"
-             android:text="Titulo"
+             android:fontFamily="@font/font_style_medium"
+             android:text="Ubicación"
              android:textAlignment="center"
              android:textSize="16sp" />
 
@@ -85,7 +85,7 @@
 
              <Button
                  android:id="@+id/likeBtn"
-                 android:layout_width="262dp"
+                 android:layout_width="63dp"
                  android:layout_height="match_parent"
                  android:layout_weight="3"
                  android:background="@color/colorWhite"
@@ -98,7 +98,7 @@
 
              <TextView
                  android:id="@+id/pLikesTv"
-                 android:layout_width="61dp"
+                 android:layout_width="48dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0"
                  android:textColor="@color/colorPrimary" />
@@ -106,7 +106,7 @@
              <Button
                  android:id="@+id/comentarioBtn"
 
-                 android:layout_width="305dp"
+                 android:layout_width="312dp"
                  android:layout_height="95dp"
                  android:background="@color/colorWhite"
                  android:drawableStart="@drawable/comentario"
@@ -134,7 +134,7 @@
              android:layout_height="20dp"
              android:layout_marginTop="10dp"
              android:autoLink="all"
-             android:fontFamily="sans-serif-light"
+             android:fontFamily="@font/font_style_regular"
              android:text="Descripción del post"
              android:textColor="@color/colorBlack" />
 
@@ -142,6 +142,7 @@
              android:id="@+id/pTiempoTv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
+             android:fontFamily="@font/font_style_regular"
              android:text="33 min" />
 
      </LinearLayout>
