--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -12,13 +12,14 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <!--Convertimos esta parte del relative en una imagen-->
             <ImageView
                 android:id="@+id/portadaIv"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="220dp"
                 android:background="@drawable/fondo"
                 android:scaleType="fitXY"></ImageView>
 
@@ -26,7 +27,7 @@
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="118dp"
                 android:layout_marginTop="100dp"
                 android:orientation="horizontal">
 
@@ -37,7 +38,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
                     android:background="@color/colorAccent"
-                    app:srcCompat="@drawable/img_inicio" />
+                    app:srcCompat="@drawable/icon_person" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -46,22 +47,33 @@
 
                     <TextView
                         android:id="@+id/nombre"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="271dp"
+                        android:layout_height="44dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:text=""
-                        android:textColor="@color/colorMediumBlack"
+                        android:fontFamily="@font/font_style_bold"
+                        android:hint="Nombre"
+
                         android:textSize="25sp" />
 
                     <TextView
-                        android:id="@+id/descripcion"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:id="@+id/lugar"
+                        android:layout_width="259dp"
+                        android:layout_height="29dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
-                        android:textColor="@color/colorMediumBlack" />
+                        android:fontFamily="@font/font_style_regular"
+                        android:hint="¿De donde eres? " />
+
+                    <TextView
+                        android:id="@+id/descripcion"
+                        android:layout_width="271dp"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:fontFamily="@font/font_style_regular"
+                        android:hint="Pon aquí algo sobre ti " />
                 </LinearLayout>
             </LinearLayout>
 
@@ -69,7 +81,24 @@
                 android:id="@+id/recyclerView_posts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/linearLayout" />
+                android:layout_below="@+id/linearLayout"
+                android:layout_marginTop="57dp" />
+
+            <TextView
+                android:id="@+id/viajes"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="215dp"
+                android:layout_marginBottom="7dp"
+                android:background="@color/colorAccent"
+                android:fontFamily="@font/font_style_bold"
+                android:paddingTop="15dp"
+                android:text="MIS VIAJES"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:textSize="17dp" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/boton_flotante"
@@ -80,7 +109,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="395dp"
-                android:src="@drawable/editar" />
+                app:srcCompat="@drawable/editar" />
         </RelativeLayout>
     </ScrollView>
 
