--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -14,6 +14,17 @@
         android:layout_height="match_parent">
 
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/boton_flotante_chat_List"
+            android:layout_width="474dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginLeft="334dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="70dp"
+            app:backgroundTint="#FFFFFF"
+            app:srcCompat="@mipmap/ic_lista_chat" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
 
