--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -54,7 +54,7 @@
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/font_style_bold"
                         android:hint="Nombre"
-
+                        android:text="Nombre"
                         android:textSize="25sp" />
 
                     <TextView
@@ -64,7 +64,8 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:fontFamily="@font/font_style_regular"
-                        android:hint="¿De donde eres? " />
+                        android:hint="¿De donde eres?"
+                        android:text="¿De donde eres?"/>
 
                     <TextView
                         android:id="@+id/descripcion"
@@ -73,7 +74,8 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                         android:fontFamily="@font/font_style_regular"
-                        android:hint="Pon aquí algo sobre ti " />
+                        android:hint="Pon aquí algo sobre ti "
+                        android:text="Pon aquí algo sobre ti"/>
                 </LinearLayout>
             </LinearLayout>
 
