--- a/app/src/main/res/color/seleccionado.xml
+++ b/app/src/main/res/color/seleccionado.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <item android:color="@color/colorMediumBlack" android:state_checked="true"/>
-    <item android:color="@color/colorWhite"/>
+    <item android:color="#8DBBDE" android:state_checked="true"/>
+    <item android:color="@android:color/darker_gray"/>
 </selector>
