--- a/app/src/main/res/layout/filas_posts.xml
+++ b/app/src/main/res/layout/filas_posts.xml
@@ -1,143 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
-    android:layout_height="400dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:id="@+id/cardView"
     android:layout_margin="10dp"
     app:cardUseCompatPadding="true"
-    android:background="@color/colorWhite"
-    android:backgroundTint="@color/colorWhite"
     app:cardBackgroundColor="@color/cardview_shadow_end_color"
     android:outlineSpotShadowColor="@color/colorAccent"
     >
 
 
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="vertical"
-         android:background="@color/colorWhite"
-         >
-
-         <LinearLayout
-             android:id="@+id/perfilLayout"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:orientation="horizontal"
-             android:gravity="center_vertical"
-             >
-
-             <com.blogspot.atifsoftwares.circularimageview.CircularImageView
-                 android:id="@+id/uImagenIv"
-                 android:scaleType="centerCrop"
-                 app:srcCompat="@drawable/icon_person"
-                 app:c_border_color="@color/colorAccent"
-                 android:layout_width="50dp"
-                 android:layout_height="50dp"/>
-
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="vertical"
-                 android:layout_weight="1">
-
-                 <TextView
-                     android:id="@+id/uNameTv"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:fontFamily="@font/font_style_medium"
-                     android:text="Name"
-                     android:textColor="@color/colorMediumBlack"
-                     android:textSize="20sp" />
-
-             </LinearLayout>
-
-             <ImageButton
-                 android:id="@+id/opcionesBtn"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:background="@null"
-                 android:src="@drawable/opciones"/>
-         </LinearLayout>
-
-         <TextView
-             android:id="@+id/pTituloTv"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_marginBottom="10dp"
-             android:autoLink="all"
-             android:fontFamily="@font/font_style_medium"
-             android:text="Ubicación"
-             android:textAlignment="center"
-             android:textSize="16sp" />
-
-         <ImageView
-             android:id="@+id/pImagenIv"
-             android:layout_width="match_parent"
-             android:layout_height="186dp"
-             android:background="@color/colorWhite"
-             />
-
-         <View
-             android:layout_width="match_parent"
-
-             android:layout_height="1dp"
-             android:background="@color/colorWhite"/>
-
-         <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="47dp"
-             android:gravity="center"
-             android:orientation="horizontal">
-
-             <Button
-                 android:id="@+id/likeBtn"
-                 android:layout_width="47dp"
-                 android:layout_height="match_parent"
-                 android:layout_weight="3"
-                 android:background="@color/colorWhite"
-                 android:drawableStart="@drawable/like"
-                 android:drawableLeft="@drawable/like"
-                 android:drawablePadding="0dp"
-                 android:fontFamily="sans-serif-light"
-                 android:paddingLeft="10dp"
-                 android:text=""
-                 android:textColor="@color/colorPrimaryDark" />
+    <LinearLayout
+        android:id="@+id/postL"
+        android:layout_width="299dp"
+        android:layout_height="382dp"
+        android:layout_marginTop="130dp"
+        android:orientation="vertical"
+        style="@style/gradientPink"
+        android:layout_marginLeft="18dp"
+        >
 
 
-             <TextView
-                 android:id="@+id/pLikesTv"
-                 android:layout_width="50dp"
-                 android:layout_height="wrap_content"
-                 android:layout_weight="0"
+        <LinearLayout
+            android:id="@+id/perfilLayout"
+            android:layout_width="289dp"
+            android:layout_height="49dp"
+            android:layout_marginLeft="10dp"
 
-                 android:background="@color/colorWhite"
-                 android:textColor="@color/colorPrimary" />
-
-
-             <Button
-                 android:id="@+id/comentarioBtn"
-
-                 android:layout_width="50dp"
-                 android:layout_height="match_parent"
-                 android:background="@color/colorWhite"
-                 android:drawableStart="@drawable/comentario"
-                 android:drawableLeft="@drawable/comentario"
-                 android:text=""
-                 android:textColor="@color/colorPrimaryDark" />
-
-             <TextView
-                 android:id="@+id/pComentarioTv"
-                 android:layout_width="wrap_content"
-                 android:layout_height="31dp"
-                 android:text="1.2k comentarios"
-                 android:textColor="@color/colorPrimary" />
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
 
-             <!--<Button
+            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
+                android:id="@+id/uImagenIv"
+                android:layout_width="46dp"
+                android:layout_height="41dp"
+                android:scaleType="centerCrop"
+                app:c_border_color="#8DBBDE"
+                app:srcCompat="@drawable/icon_person" />
+
+
+            <LinearLayout
+                android:layout_width="171dp"
+                android:layout_height="24dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/uNameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/font_style_medium"
+                    android:text="Name"
+                    android:textColor="@color/colorMediumBlack"
+                    android:textSize="18sp" />
+
+
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/opcionesBtn"
+                android:layout_width="57dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/opciones" />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/pTituloTv"
+            android:layout_width="match_parent"
+            android:layout_height="21dp"
+            android:layout_marginBottom="10dp"
+            android:autoLink="all"
+            android:fontFamily="@font/font_style_medium"
+            android:text="Ubicación"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/pImagenIv"
+            style="@style/circleButton"
+            android:layout_width="270dp"
+            android:layout_height="157dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"/>
+
+        <LinearLayout
+            android:layout_width="242dp"
+            android:layout_height="46dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/likeBtn"
+                style="@style/gradientPink"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:drawableStart="@drawable/like"
+                android:drawableLeft="@drawable/like"
+                android:drawablePadding="0dp"
+                android:fontFamily="sans-serif-light"
+                android:paddingLeft="10dp"
+                android:text=""
+                android:textColor="@color/colorPrimaryDark" />
+
+
+            <TextView
+                android:id="@+id/pLikesTv"
+                style="gradientPink"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary" />
+
+
+            <Button
+                android:id="@+id/comentarioBtn"
+                style="@style/gradientPink"
+                android:layout_width="38dp"
+                android:layout_height="match_parent"
+                android:drawableStart="@drawable/comentario"
+                android:drawableLeft="@drawable/comentario" />
+
+            <TextView
+                android:id="@+id/pComentarioTv"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary" />
+
+
+            <!--<Button
                  android:id="@+id/compartirBtn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
@@ -148,27 +151,27 @@
                  android:drawablePadding="5dp"
                  android:background="@color/colorWhite"
                  android:drawableStart="@drawable/compartir" /> -->
-         </LinearLayout>
+        </LinearLayout>
 
-         <TextView
-             android:id="@+id/pDescripcionTv"
-             android:layout_width="match_parent"
-             android:layout_height="26dp"
-             android:layout_marginTop="10dp"
-             android:autoLink="all"
-             android:fontFamily="@font/font_style_regular"
-             android:text="Descripción del post"
-             android:paddingLeft="10dp"
-             android:textColor="@color/colorBlack" />
+        <TextView
+            android:id="@+id/pDescripcionTv"
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:layout_marginTop="10dp"
+            android:autoLink="all"
+            android:fontFamily="@font/font_style_regular"
+            android:paddingLeft="10dp"
+            android:text="Descripción del post"
+            android:textColor="@color/colorBlack" />
 
-         <TextView
-             android:id="@+id/pTiempoTv"
-             android:layout_width="106dp"
-             android:layout_height="27dp"
-             android:fontFamily="@font/font_style_regular"
-             android:paddingLeft="10dp"
-             android:text="33 min" />
+        <TextView
+            android:id="@+id/pTiempoTv"
+            android:layout_width="106dp"
+            android:layout_height="27dp"
+            android:fontFamily="@font/font_style_regular"
+            android:paddingLeft="10dp"
+            android:text="33 min" />
 
-     </LinearLayout>
+    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
