--- a/app/src/main/res/layout/lista_usuarios.xml
+++ b/app/src/main/res/layout/lista_usuarios.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="75dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp"
+    style="@style/circleButton"
     app:cardBackgroundColor="@color/colorWhite"
     app:contentPadding="3dp">
 
@@ -16,9 +17,9 @@
 
         <com.blogspot.atifsoftwares.circularimageview.CircularImageView
             android:id="@+id/avatarIv"
-            android:layout_width="70dp"
+            android:layout_width="46dp"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/search_icon" />
+            app:srcCompat="@drawable/icon_person" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,14 +29,16 @@
                 android:id="@+id/nombreTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/font_style_medium"
                 android:text="Nombre"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textColor="@color/colorBlack"/>
             <TextView
                 android:id="@+id/emailTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Email"
+                android:fontFamily="@font/font_style_medium"
                 android:textColor="@color/colorBlack"/>
         </LinearLayout>
 
