--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#8DBBDE</item>
+        <item name="colorPrimaryDark">#8DBBDE</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorMediumBlack</item>
     </style>
 
     <!--Sin ActionBar -->
@@ -26,6 +27,16 @@
 
     <style name="loginButton" parent="viewParent">
         <item name="android:background">@drawable/login_button_bk</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="circleButton" parent="viewParent">
+        <item name="android:background">@drawable/login_button_bk2</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="gradientPink" parent="viewParent">
+        <item name="android:background">@drawable/login_button_bk3</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textStyle">bold</item>
     </style>
