--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -12,11 +12,8 @@
 
     <TextView
         android:id="@+id/textView2"
-
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="42dp"
         android:text="¡Registrate!"
         android:textAlignment="center"
         android:textColor="#326994"
@@ -25,28 +22,28 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="187dp"
-        android:layout_height="76dp"
+        android:layout_width="185dp"
+        android:layout_height="81dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="97dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="20dp"
         app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/emailTIL"
+        android:layout_width="364dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:id="@+id/emailTIL">
+        android:layout_marginTop="160dp">
 
         <EditText
             android:id="@+id/emailEt"
-            android:inputType="textEmailAddress"
-            android:hint="E-mail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
         <!--TextView: CONTRASEÑA -->
@@ -70,7 +67,6 @@
 
     <!--TextView: NICK -->
 
-    <!--TextView: BOTON REGISTRO -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nikTIL"
         android:layout_width="367dp"
@@ -83,7 +79,37 @@
             android:id="@+id/nikEt"
             android:layout_width="match_parent"
             android:layout_height="41dp"
-            android:hint="Nick "
+            android:hint="Nombre de usuario "
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/lugarTIL"
+        android:layout_width="367dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nikTIL"
+        android:layout_centerVertical="true"
+        ><!--el ojito de la contraseña-->
+
+        <EditText
+            android:id="@+id/lugarEt"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:hint="¿De dónde eres? "
+            android:inputType="textAutoComplete" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/descripcionTIL"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lugarTIL"
+        android:layout_centerVertical="true"><!--el ojito de la contraseña-->
+
+        <EditText
+            android:id="@+id/descripcionEt"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:hint="Escribe algo sobre ti "
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,11 +118,11 @@
         style="@style/loginButton"
         android:layout_width="161dp"
         android:layout_height="59dp"
-        android:layout_below="@id/nikTIL"
+        android:layout_below="@id/descripcionTIL"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:drawablePadding="5dp"
-        android:text="Registrarse" />
+        android:text="REGÍSTRATE" />
 
     <TextView
         android:id="@+id/estar_registradoTv"
