--- a/app/src/main/res/layout/filas_chat_list.xml
+++ b/app/src/main/res/layout/filas_chat_list.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:contentPadding="3dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="5dp">
+    app:cardElevation="5dp"
+    style="@style/circleButton"
+    app:cardBackgroundColor="@color/colorWhite">
 
     <RelativeLayout
         android:layout_width="match_parent"
