--- a/app/src/main/res/layout/activity_chat__list_.xml
+++ b/app/src/main/res/layout/activity_chat__list_.xml
@@ -10,7 +10,7 @@
         android:id="@+id/recyclerView_lista_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/filas_chat_list"
+        tools:listitem="@layout/lista_chat_list"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </FrameLayout>
