--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -71,6 +71,7 @@
                         android:layout_width="271dp"
                         android:layout_height="35dp"
                         android:layout_marginStart="5dp"
+
                         android:layout_marginLeft="5dp"
                         android:fontFamily="@font/font_style_regular"
                         android:hint="Pon aquí algo sobre ti " />
@@ -109,7 +110,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="395dp"
-                app:srcCompat="@drawable/editar" />
+                app:srcCompat="@mipmap/ic_editar" />
         </RelativeLayout>
     </ScrollView>
 
