--- a/app/src/main/res/layout/filas_posts.xml
+++ b/app/src/main/res/layout/filas_posts.xml
@@ -6,30 +6,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:id="@+id/cardView"
-    android:layout_margin="10dp"
     app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/cardview_shadow_end_color"
     android:outlineSpotShadowColor="@color/colorAccent"
     >
+   <!-- <TextView
+        android:id="@+id/textView3"
+        android:layout_width="318dp"
+        android:layout_height="68dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/font_style_bold"
+        android:text="Hello,"
+        android:textColor="@color/colorAccent"
+        android:textSize="30dp" />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="235dp"
+        android:layout_height="82dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/font_style_bold"
+        android:text="what are you loking for?"
+        android:textColor="@color/colorMediumBlack"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="172dp"
+        android:layout_height="47dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/font_style_bold"
+        android:hint="nombre usuario"
+        android:textSize="20dp" /> -->
 
     <LinearLayout
         android:id="@+id/postL"
-        android:layout_width="299dp"
-        android:layout_height="382dp"
-        android:layout_marginTop="130dp"
-        android:orientation="vertical"
         style="@style/gradientPink"
-        android:layout_marginLeft="18dp"
-        >
+        android:layout_width="262dp"
+        android:layout_height="364dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
 
 
         <LinearLayout
             android:id="@+id/perfilLayout"
-            android:layout_width="289dp"
-            android:layout_height="49dp"
+            android:layout_width="244dp"
+            android:layout_height="42dp"
             android:layout_marginLeft="10dp"
-
             android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -86,14 +113,14 @@
         <ImageView
             android:id="@+id/pImagenIv"
             style="@style/circleButton"
-            android:layout_width="270dp"
-            android:layout_height="157dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_width="220dp"
+            android:layout_height="179dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginBottom="10dp" />
 
         <LinearLayout
-            android:layout_width="242dp"
-            android:layout_height="46dp"
+            android:layout_width="241dp"
+            android:layout_height="31dp"
             android:gravity="center"
             android:orientation="horizontal">
 
