--- a/app/src/main/res/layout/activity_chat__list_.xml
+++ b/app/src/main/res/layout/activity_chat__list_.xml
@@ -9,8 +9,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_lista_chat"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/lista_chat_list"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_height="663dp"
+        android:background="@drawable/fondo_log2"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/lista_chat_list" />
 
 </FrameLayout>
