--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,11 +5,58 @@
     android:layout_height="match_parent"
     tools:context=".menu.HomeFragment">
 
+    <LinearLayout
+        android:layout_width="619dp"
+        android:layout_height="205dp"
+        android:background="@drawable/fondo_log1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="89dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/font_style_bold"
+            android:text="Hello,"
+            android:textColor="@color/colorAccent"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/font_style_bold"
+            android:hint="usuario"
+            android:textAlignment="textEnd"
+            android:textSize="20dp" />
+
+
+    </LinearLayout>
+    <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="307dp"
+            android:layout_height="82dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="90dp"
+            android:fontFamily="@font/font_style_bold"
+            android:text="¿Qué lugares descubrimos hoy?"
+            android:textColor="@color/colorMediumBlack"
+            android:textSize="30dp" />
+
+</LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/postsRecyclerView"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="70dp"/>
+        android:layout_height="522dp"
+        android:layout_marginTop="190dp"
+        android:orientation="vertical" />
 
 </FrameLayout>
