--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/portadaIv"
                 android:layout_width="match_parent"
                 android:layout_height="185dp"
-                android:background="@drawable/fondo"
+                android:background="@drawable/fondo_log4"
                 android:scaleType="fitXY"></ImageView>
 
             <!-- Para que se publiquen los post de un usuario concreto -->
@@ -31,13 +31,13 @@
                 android:layout_marginTop="50dp"
                 android:orientation="horizontal">
 
-                <ImageView
+
+                <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                     android:id="@+id/avatar"
-                    android:layout_width="120dp"
+                    android:layout_width="109dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
-                    android:background="@color/colorAccent"
                     app:srcCompat="@drawable/icon_person" />
 
                 <LinearLayout
@@ -47,11 +47,11 @@
 
                     <TextView
                         android:id="@+id/nombre"
-                        android:layout_width="271dp"
-                        android:layout_height="44dp"
+                        android:layout_width="192dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="15dp"
                         android:fontFamily="@font/font_style_bold"
                         android:hint="Nombre"
 
@@ -59,10 +59,11 @@
 
                     <TextView
                         android:id="@+id/lugar"
-                        android:layout_width="259dp"
-                        android:layout_height="29dp"
+                        android:layout_width="256dp"
+                        android:layout_height="30dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
                         android:fontFamily="@font/font_style_regular"
                         android:hint="¿De donde eres? " />
 
@@ -81,9 +82,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_posts"
                 android:layout_width="match_parent"
-                android:layout_height="600dp"
+                android:layout_height="549dp"
                 android:layout_below="@+id/linearLayout"
-                android:layout_marginTop="58dp" />
+                android:layout_marginTop="70dp" />
 
             <TextView
                 android:id="@+id/viajes"
@@ -92,22 +93,23 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="0dp"
                 android:layout_marginTop="164dp"
+                style="@style/gradientPink"
                 android:layout_marginBottom="7dp"
-                android:background="@color/colorAccent"
                 android:fontFamily="@font/font_style_bold"
                 android:paddingTop="15dp"
                 android:text="Galeria"
                 android:textAlignment="center"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorAccent"
                 android:textSize="17dp" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/boton_flotante"
-                android:layout_width="62dp"
-                android:layout_height="71dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="334dp"
                 android:layout_marginLeft="334dp"
                 android:layout_marginEnd="15dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="395dp"
                 app:srcCompat="@mipmap/ic_editar" />
