--- a/app/src/main/res/layout/lista_chat_list.xml
+++ b/app/src/main/res/layout/lista_chat_list.xml
@@ -4,20 +4,23 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:contentPadding="3dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="10dp"
     style="@style/circleButton"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     app:cardBackgroundColor="@color/colorWhite">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <com.blogspot.atifsoftwares.circularimageview.CircularImageView
             android:id="@+id/perfilImagenIv"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            app:srcCompat="@drawable/icon_default2"/>
+            app:srcCompat="@drawable/icon_person"/>
 
         <ImageView
             android:id="@+id/estadoIv"
@@ -32,7 +35,8 @@
             android:layout_marginStart="4dp"
             android:maxLines="2"
             android:textColor="@color/colorBlack"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:fontFamily="@font/font_style_medium"
             android:layout_toEndOf="@+id/perfilImagenIv"
             android:layout_toRightOf="@id/perfilImagenIv"
             android:layout_marginLeft="3dp"/>
@@ -43,6 +47,7 @@
             android:layout_height="wrap_content"
             android:text="Ultimo mensaje"
             android:layout_marginStart="4dp"
+            android:fontFamily="@font/font_style_medium"
             android:textColor="@color/colorBlack"
             android:layout_toEndOf="@+id/perfilImagenIv"
             android:layout_toRightOf="@id/perfilImagenIv"
