--- a/app/src/main/res/layout/opciones_cambiar_contrasena.xml
+++ b/app/src/main/res/layout/opciones_cambiar_contrasena.xml
@@ -4,17 +4,19 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp"
+    android:background="@drawable/fondo_log3"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textCambiarContrasena"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:fontFamily="@font/font_style_regular"
+        android:fontFamily="@font/font_style_medium"
         android:text="Cambiar Contraseña"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textStyle="bold"
+        android:layout_marginTop="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.179"
@@ -72,15 +74,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+
             app:layout_constraintVertical_bias="0.283"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/cambiarContrasena"
-        android:layout_width="match_parent"
+        style="@style/loginButton"
+        android:layout_width="221dp"
         android:layout_height="wrap_content"
         android:outlineAmbientShadowColor="@color/colorPrimary"
         android:text="Cambiar Contraseña"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
