--- a/app/src/main/res/layout/activity_perfil_lista_publicacion.xml
+++ b/app/src/main/res/layout/activity_perfil_lista_publicacion.xml
@@ -6,34 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".menu.perfil.PerfilListaPublicacionActivity">
 
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <!--Convertimos esta parte del relative en una imagen-->
             <ImageView
                 android:id="@+id/portadaIv"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/fondo"
-                android:background="@color/colorAccent">
-            </ImageView>
+                android:layout_height="185dp"
+                android:background="@drawable/fondo_log4"
+                android:scaleType="fitXY"></ImageView>
 
+            <!-- Para que se publiquen los post de un usuario concreto -->
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="100dp">
+                android:layout_height="118dp"
+                android:layout_marginTop="50dp"
+                android:orientation="horizontal">
 
-                <ImageView
+
+                <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                     android:id="@+id/avatar"
-                    android:layout_width="120dp"
+                    android:layout_width="109dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
-                    android:background="@color/colorPrimary"
                     app:srcCompat="@drawable/icon_person" />
 
                 <LinearLayout
@@ -43,30 +49,72 @@
 
                     <TextView
                         android:id="@+id/nombre"
-                        android:layout_width="match_parent"
+                        android:layout_width="192dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/font_style_bold"
+                        android:hint="Nombre"
+
+                        android:textSize="25sp" />
+
+                    <TextView
+                        android:id="@+id/lugar"
+                        android:layout_width="256dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:textSize="25sp"
-                        android:text=""
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginLeft="5dp" />
+                        android:fontFamily="@font/font_style_regular"
+                        android:hint="¿De donde eres? " />
 
                     <TextView
                         android:id="@+id/descripcion"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_width="271dp"
+                        android:layout_height="35dp"
                         android:layout_marginStart="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginLeft="5dp" />
+
+                        android:layout_marginLeft="5dp"
+                        android:fontFamily="@font/font_style_regular"
+                        android:hint="Pon aquí algo sobre ti " />
                 </LinearLayout>
             </LinearLayout>
 
-            <!-- Para que se publiquen los post de un usuario concreto -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_posts"
                 android:layout_width="match_parent"
+                android:layout_height="549dp"
+                android:layout_below="@+id/linearLayout"
+                android:layout_marginTop="70dp" />
+
+            <TextView
+                android:id="@+id/viajes"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="164dp"
+                style="@style/gradientPink"
+                android:layout_marginBottom="7dp"
+                android:fontFamily="@font/font_style_bold"
+                android:paddingTop="15dp"
+                android:text="Galeria"
+                android:textAlignment="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="17dp" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/boton_flotante"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/linearLayout" />
+                android:layout_marginStart="334dp"
+                android:layout_marginLeft="334dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="395dp"
+                app:srcCompat="@mipmap/ic_editar" />
         </RelativeLayout>
+    </ScrollView>
 </ScrollView>
